--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ dependencies:
   image: ^4.5.4
   device_preview_plus: ^2.3.1
   flutter_screenutil: ^5.9.3
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  image_editor_plus: ^1.0.6
+  pro_image_editor: ^10.2.2
+  before_after: ^3.2.0
+  cunning_document_scanner: ^1.2.3
+  image_cropper: ^9.1.0
 
 dev_dependencies:
   flutter_test:
